Setup and start tracking env variables using environs (Bonus Point 4)

--- a/environment.yml
+++ b/environment.yml
@@ -6,4 +6,5 @@ dependencies:
   - conda-forge::djangorestframework
   - conda-forge::langchain
   - anaconda::psycopg2
+  - conda-forge::environs
 prefix: /home/mafia/.conda/envs/dtxplus
