Implement a crude implementation of RAG

--- a/dtxplus_patient_chat/.env
+++ b/dtxplus_patient_chat/.env
@@ -17,3 +17,5 @@ ALLOWED_HOSTS=localhost,127.0.0.1
 
 # LLM SETTINGS:
 # LLM Model
+LLM_MODEL=llama3.1:8b-instruct-fp16
+# https://huggingface.co/ruslanmv/Medical-Llama3-8B
