Add langchain tracing and fix prompt

--- a/dtxplus_patient_chat/.env
+++ b/dtxplus_patient_chat/.env
@@ -16,6 +16,12 @@ DB_PORT=5432
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # LLM SETTINGS:
+# Langchain Tracing
+LANGCHAIN_TRACING_V2="true"
+LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
+LANGCHAIN_API_KEY="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"
+LANGCHAIN_PROJECT="dtxplus"
+
 # LLM Model
 LLM_MODEL=llama3.1:8b-instruct-fp16
 # https://huggingface.co/ruslanmv/Medical-Llama3-8B
