--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==0.34.2
 aiohappyeyeballs @ file:///croot/aiohappyeyeballs_1725434011349/work
 aiohttp @ file:///croot/aiohttp_1725527756643/work
 aiosignal @ file:///tmp/build/80754af9/aiosignal_1637843061372/work
@@ -9,34 +10,69 @@ attrs @ file:///work/perseverance-python-buildout/croot/attrs_1698845858439/work
 Brotli @ file:///croot/brotli-split_1714483155106/work
 certifi @ file:///croot/certifi_1725551672989/work/certifi
 charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
+click @ file:///work/perseverance-python-buildout/croot/click_1698845879718/work
+dataclasses-json @ file:///croot/dataclasses-json_1715264788438/work
 Django @ file:///croot/django_1724964382619/work
 djangorestframework @ file:///home/conda/feedstock_root/build_artifacts/djangorestframework_1718812538421/work
+environs @ file:///home/conda/feedstock_root/build_artifacts/environs_1720293723765/work
+filelock==3.16.1
 frozenlist @ file:///work/perseverance-python-buildout/croot/frozenlist_1698886842990/work
+fsspec==2024.9.0
 greenlet @ file:///croot/greenlet_1702059959679/work
 h11 @ file:///croot/h11_1706652277403/work
 httpcore @ file:///croot/httpcore_1706728464539/work
 httpx @ file:///croot/httpx_1723474802858/work
+huggingface-hub==0.25.0
 idna @ file:///croot/idna_1714398848350/work
+Jinja2==3.1.4
+joblib==1.4.2
 jsonpatch @ file:///croot/jsonpatch_1714483231291/work
 jsonpointer==2.1
 langchain @ file:///home/conda/feedstock_root/build_artifacts/langchain_1726390752915/work
+langchain-community @ file:///home/conda/feedstock_root/build_artifacts/langchain-community_1726423384911/work
 langchain-core @ file:///home/conda/feedstock_root/build_artifacts/langchain-core_1726888409762/work
+langchain-huggingface==0.1.0
+langchain-ollama==0.2.0
 langchain-text-splitters @ file:///home/conda/feedstock_root/build_artifacts/langchain-text-splitters_1726389599337/work
 langsmith @ file:///home/conda/feedstock_root/build_artifacts/langsmith_1726805584872/work
+MarkupSafe==2.1.5
+marshmallow @ file:///work/perseverance-python-buildout/croot/marshmallow_1698864751305/work
+mpmath==1.3.0
 multidict @ file:///croot/multidict_1701096859099/work
+mypy-extensions @ file:///work/perseverance-python-buildout/croot/mypy_extensions_1698863276135/work
+networkx==3.3
 numpy @ file:///croot/numpy_and_numpy_base_1708638617955/work/dist/numpy-1.26.4-cp312-cp312-linux_x86_64.whl#sha256=b8e59fcb10ab071cbeded47aed247ddfa1c902d595848c27f82021340e226134
+ollama==0.3.3
 orjson @ file:///croot/orjson_1711143063525/work/target/wheels/orjson-3.9.15-cp312-cp312-linux_x86_64.whl#sha256=620fa7c1189ce4a162e91f49b326ccc3bf5e6dbe6eb0e14aebc1060b5515f2c8
 packaging @ file:///croot/packaging_1720101850331/work
+pillow==10.4.0
+protobuf==4.25.3
+psutil==6.0.0
+psycopg2 @ file:///work/perseverance-python-buildout/croot/psycopg2_1707348232349/work
 pydantic @ file:///croot/pydantic_1725040526370/work
+pydantic-settings @ file:///home/conda/feedstock_root/build_artifacts/pydantic-settings_1726062574860/work
 pydantic_core @ file:///croot/pydantic-core_1724790363792/work
 PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
+python-dotenv @ file:///work/perseverance-python-buildout/croot/python-dotenv_1698846722824/work
 PyYAML @ file:///work/perseverance-python-buildout/croot/pyyaml_1698849903511/work
+regex==2024.9.11
 requests @ file:///croot/requests_1721410876868/work
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
+sentence-transformers==3.1.1
+sentencepiece @ file:///home/conda/feedstock_root/build_artifacts/sentencepiece-split_1724398987042/work/python
 setuptools==75.1.0
 sniffio @ file:///croot/sniffio_1705431295498/work
 SQLAlchemy @ file:///croot/sqlalchemy_1725885050993/work
 sqlparse @ file:///work/perseverance-python-buildout/croot/sqlparse_1698874574933/work
+sympy==1.13.3
 tenacity @ file:///croot/tenacity_1721222508356/work
+threadpoolctl==3.5.0
+tokenizers==0.19.1
+tqdm==4.66.5
+triton==3.0.0
+typing-inspect @ file:///work/perseverance-python-buildout/croot/typing_inspect_1698875385278/work
 typing_extensions @ file:///croot/typing_extensions_1715268824938/work
 urllib3 @ file:///croot/urllib3_1718912636303/work
 wheel==0.44.0
