--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ marshmallow @ file:///work/perseverance-python-buildout/croot/marshmallow_169886
 mpmath==1.3.0
 multidict @ file:///croot/multidict_1701096859099/work
 mypy-extensions @ file:///work/perseverance-python-buildout/croot/mypy_extensions_1698863276135/work
+neo4j==5.25.0
 networkx==3.3
 numpy @ file:///croot/numpy_and_numpy_base_1708638617955/work/dist/numpy-1.26.4-cp312-cp312-linux_x86_64.whl#sha256=b8e59fcb10ab071cbeded47aed247ddfa1c902d595848c27f82021340e226134
 ollama==0.3.3
@@ -59,6 +60,7 @@ pydantic-settings @ file:///home/conda/feedstock_root/build_artifacts/pydantic-s
 pydantic_core @ file:///croot/pydantic-core_1724790363792/work
 PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1698845478203/work
 python-dotenv @ file:///work/perseverance-python-buildout/croot/python-dotenv_1698846722824/work
+pytz==2024.2
 PyYAML @ file:///work/perseverance-python-buildout/croot/pyyaml_1698849903511/work
 regex==2024.9.11
 requests @ file:///croot/requests_1721410876868/work
@@ -74,6 +76,7 @@ sqlparse @ file:///work/perseverance-python-buildout/croot/sqlparse_169887457493
 sympy==1.13.3
 tenacity @ file:///croot/tenacity_1721222508356/work
 threadpoolctl==3.5.0
+tiktoken==0.7.0
 tokenizers==0.19.1
 tqdm==4.66.5
 triton==3.0.0
