--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,13 @@ services:
       - ./postgres_data:/var/lib/postgresql/data
   
   neo4j:
-    container_name: neo4j
     image: neo4j:latest
+    restart: always
     ports:
       - 7474:7474
       - 7687:7687
     environment:
-      - NEO4J_AUTH=none
+      - NEO4J_AUTH=neo4j/f00bArplusplus
       - NEO4J_apoc_export_file_enabled=true
       - NEO4J_apoc_import_file_enabled=true
       - NEO4J_apoc_import_file_use__neo4j__config=true
